--- a/pcap-parser/pom.xml
+++ b/pcap-parser/pom.xml
@@ -52,6 +52,12 @@
             <artifactId>tinylog-impl</artifactId>
             <version>2.0.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.11</version>
+        </dependency>
     </dependencies>
 
     <build>
