conf file updated

--- a/parseresults/experiments.conf
+++ b/parseresults/experiments.conf
@@ -14,12 +14,15 @@ dates_activelte=2020-04-06, 2020-04-07, 2020-04-08
 starting_time_intervals = 00:00:00,02:30:00,06:00:00,09:00:00,12:00:00,15:00:00,18:00:00,21:00:00 
 duration_m = 90
 
-
-
-clientnumber=1,2,4,6,8,10
-#clientnumber=1
+clientnumber_active=1,2,4,6,8,10
+clientnumber_passivewifi=1,2,4,6,8,10
+clientnumber_passivelte=1,2
+#clientnumber=6
 noise=0M,10M,20M,30M,40M,50M
-dashfiles=filetest_1,file5min,file12min,file25min
+
+
+#dashfiles=filetest_1,file5min,file12min,file25min
+dashfiles=file5min,file12min,file25min
 #dashfiles=file25min
 client_subnetaddr_wifi=192.168.1
 client_subnetaddr_lte=10.0.3
