--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,61 +2,32 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="it.unipi.dii.mecperfng">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
-        android:usesCleartextTraffic="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher2"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher2_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"> <!--android:usesCleartextTraffic="true"-->
-        <activity android:name=".BandwidthTCPGraphActivity"
-            android:label="@string/title_activity_bandwidth"
-            android:parentActivityName=".ResultsActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.unipi.dii.mecperfng.ResultsActivity" />
-        </activity>
-
-        <activity android:name=".BandwidthActivity"
-            android:label="@string/title_activity_bandwidth"
-            android:parentActivityName=".ResultsActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.unipi.dii.mecperfng.ResultsActivity" />
-        </activity>
-        <activity android:name=".RttActivity"
-            android:label="@string/title_activity_rtt"
-            android:parentActivityName=".ResultsActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.unipi.dii.mecperfng.ResultsActivity" />
-        </activity>
-        <activity android:name=".ResultsActivity"
-            android:label="@string/title_activity_results"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.unipi.dii.mecperfng.MainActivity" />
-        </activity>
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Results.BandwidthTCP_Results" android:theme="@style/AppTheme.MyStyle"></activity>
         <activity
-            android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="it.unipi.dii.mecperfng.MainActivity" />
-        </activity>
+            android:name=".Results.BandwidthUDP_Results"
+            android:theme="@style/AppTheme.MyStyle" />
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".Results.Rtt_Results"
+            android:theme="@style/AppTheme.MyStyle" />
+        <activity
+            android:name=".HomeActivity"
+            android:theme="@style/AppTheme.MyStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
+        </activity> <!-- android:usesCleartextTraffic="true" -->
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
 </manifest>
