--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        maven {
+            url 'http://dl.bintray.com/gigamole/maven/'
+            }
+        maven { url 'https://jitpack.io' }
     }
 }
 
