--- a/parseresults/experiments.conf
+++ b/parseresults/experiments.conf
@@ -5,29 +5,115 @@ password=camotrace
 database=MECPerf
 
 
-[experiment_conf]
-from_passive=2019-03-23-00:00:00
-to_passive=2021-03-27-23:59:50
+[plot_esperimentiNITOS_PASSIVICONBUCHI_ATTIVIOK]
+noise=0M,10M,20M,30M,40M,50M
+
+clientnumber_active=1,2,4,6,8,10
+clientnumber_passivewifi=1,2,4,6,8,10
+clientnumber_passivelte=1,2
+
+dashfiles=filetest_1,file5min,file12min,file25min
 
 dates_activewifi=2020-01-24,2020-01-25,2020-01-26,2020-01-27,2020-01-28,2020-01-29,2020-01-30,2020-01-31,2020-02-01
 dates_activelte=2020-04-06, 2020-04-07, 2020-04-08
 starting_time_intervals = 00:00:00,02:30:00,06:00:00,09:00:00,12:00:00,15:00:00,18:00:00,21:00:00 
 duration_m = 90
+from_passive=2019-03-23-00:00:00
+to_passive=2021-03-27-23:59:50
 
-clientnumber_active=1,2,4,6,8,10
-clientnumber_passivewifi=1,2,4,6,8,10
-clientnumber_passivelte=1,2
-#clientnumber=6
-noise=0M,10M,20M,30M,40M,50M
-
-
-#dashfiles=filetest_1,file5min,file12min,file25min
-dashfiles=file5min,file12min,file25min
-#dashfiles=file25min
-client_subnetaddr_wifi=192.168.1
 client_subnetaddr_lte=10.0.3
+client_subnetaddr_wifi=192.168.1
 edgeserver_subnetaddr_wifi=10.0.1
 edgeserver_subnetaddr_lte=192.168.200
 remoteserver_subnetaddr_wifi=131.114.73
 remoteserver_subnetaddr_lte=131.114.73
+
+
+[plot_esperimentiNITOS_PPASSIVISENZABUCHI_SECONDOEXPWIFICONMAGGIORICROSSTRAFFIC]
+#noise=0M,10M,20M,30M,40M,50M,75M,100M,150M
+#noise=0M,10M,20M,30M,40M,50M
+noise=0M
+
+clientnumber_active=1,2,4,6,8,10
+clientnumber_passivewifi=8
+#clientnumber_passivewifi=1,2,4,6,8,10
+clientnumber_passivelte=1,2
+
+#dashfiles=filetest_1,file5min,file12min,file25min
+dashfiles=file25min
+
+dates_activewifi=2020-11-17,2020-11-18
+dates_activelte=2020-11-17
+starting_time_intervals = 11:00:00
+duration_m = 90
+from_passive=2020-01-23-00:00:00
+to_passive=2020-11-27-23:59:50
+
+
+client_subnetaddr_lte=10.0.3
+client_subnetaddr_wifi=192.168.1
+edgeserver_subnetaddr_wifi=10.0.1
+edgeserver_subnetaddr_lte=192.168.200
+remoteserver_subnetaddr_wifi=131.114.73
+remoteserver_subnetaddr_lte=131.114.73
+
+evaluate_fragmentquality=False
+
+
+[plot_esperimentiUNIPI_PASSIVI]
+from_passive=2020-11-26-00:00:00
+to_passive=2020-11-30-23:59:50
+
+dashfiles=WIREDUNIPIlog0,WIREDUNIPIlog1,WIREDUNIPIlog2,WIREDUNIPIlog3,WIREDUNIPIlog4,WIREDUNIPIlog5,WIREDUNIPIlog6,WIREDUNIPIlog7,WIREDUNIPIlog8,WIREDUNIPIlog9,WIRELESSUNIPIlog0,WIRELESSUNIPIlog1,WIRELESSUNIPIlog2,WIRELESSUNIPIlog3,WIRELESSUNIPIlog4,WIRELESSUNIPIlog5,WIRELESSUNIPIlog6,WIRELESSUNIPIlog7,WIRELESSUNIPIlog8,WIRELESSUNIPIlog9,WIRELESSCASAlog0,WIRELESSCASAlog1,WIRELESSCASAlog2,WIRELESSCASAlog3,WIRELESSCASAlog4,WIRELESSCASAlog5,WIRELESSCASAlog6,WIRELESSCASAlog7,WIRELESSCASAlog8,WIRELESSCASAlog9
+noise=0M
+
+clientnumber_passivewifi=1
+client_subnetaddr_wifi=10.0
+edgeserver_subnetaddr_wifi=10.0.1
+remoteserver_subnetaddr_wifi=131.114.73
+
+
+evaluate_fragmentquality=True
+
+[plot_esperimentiNITOS_PASSIVICONQUALITaDELFRAMMENTO1client]
+noise=0M,10M,20M,30M,40M,50M
+clientnumber_passivewifi=1
+
+dashfiles=file25min
+
+from_passive=2019-03-12-00:00:00
+to_passive=2021-03-29-23:59:50
+
+client_subnetaddr_wifi=192.168.1
+edgeserver_subnetaddr_wifi=10.0.1
+remoteserver_subnetaddr_wifi=131.114.73
+
+evaluate_fragmentquality=True
+
+[plot_esperimentiNITOS_PASSIVICONQUALITaDELFRAMMENTO10-8client]
+noise=0M,10M
+clientnumber_passivewifi=10
+
+dashfiles=file25min
+
+from_passive=2019-03-12-00:00:00
+to_passive=2021-03-29-23:59:50
+
+client_subnetaddr_wifi=192.168.1
+edgeserver_subnetaddr_wifi=10.0.1
+remoteserver_subnetaddr_wifi=131.114.73
+
+evaluate_fragmentquality=True
+
+##############################################################################################################
+
+##############################################ESPERIMENTI NITOS 2#############################################
+#noise=0M,10M,20M,30M,40M,50M
+#dashfiles=file25min,file12min
+#from_passive=2020-11-10-00:00:00
+#to_passive=2020-11-30-23:59:50
+#clientnumber_passivewifi=1
+
+
+
 
