--- a/parseresults/experiments.conf
+++ b/parseresults/experiments.conf
@@ -1,8 +1,51 @@
 [sql_conf]
-host=localhost
-user=root
-password=camotrace
-database=MECPerf
+host=131.114.73.0
+user=testuser
+password=pku630r
+database=MECPerf_FIXED
+
+
+[plot_tesi_attivi]
+noise=0M,10M,20M,30M,40M,50M
+
+clientnumber_active=1,2,4,6,8,10
+clientnumber_passivewifi=1,2,4,6,8,10
+clientnumber_passivelte=1,2
+
+dates_activewifi=2020-01-24,2020-01-25,2020-01-26,2020-01-27,2020-01-28,2020-01-29,2020-01-30,2020-01-31,2020-02-01
+dates_activelte=2020-04-06, 2020-04-07, 2020-04-08
+starting_time_intervals = 00:00:00,02:30:00,06:00:00,09:00:00,12:00:00,15:00:00,18:00:00,21:00:00 
+duration_m = 90
+from_passive=2019-03-23-00:00:00
+to_passive=2021-03-27-23:59:50
+
+client_subnetaddr_lte=10.0.3
+client_subnetaddr_wifi=192.168.1
+edgeserver_subnetaddr_wifi=10.0.1
+edgeserver_subnetaddr_lte=192.168.200
+remoteserver_subnetaddr_wifi=131.114.73
+remoteserver_subnetaddr_lte=131.114.73
+
+
+[plot_tesi_passivi_lte]
+noise=0M,10M,20M,30M,40M,50M
+dashfiles=filetest_1,file5min,file12min,file25min
+evaluate_fragmentquality=False
+
+clientnumber_passivewifi=1,2,4,6,8,10
+clientnumber_passivelte=1,2
+
+from_passive=2020-01-01-00:00:00
+to_passive=2020-11-30-23:59:59
+
+
+client_subnetaddr_lte=10.0.3
+client_subnetaddr_wifi=192.168.1
+edgeserver_subnetaddr_wifi=10.0.1
+edgeserver_subnetaddr_lte=192.168.200
+remoteserver_subnetaddr_wifi=131.114.73
+remoteserver_subnetaddr_lte=131.114.73
+
 
 
 [plot_esperimentiNITOS_PASSIVICONBUCHI_ATTIVIOK]
@@ -29,26 +72,68 @@ remoteserver_subnetaddr_wifi=131.114.73
 remoteserver_subnetaddr_lte=131.114.73
 
 
-[plot_esperimentiNITOS_PPASSIVISENZABUCHI_SECONDOEXPWIFICONMAGGIORICROSSTRAFFIC]
-#noise=0M,10M,20M,30M,40M,50M,75M,100M,150M
-#noise=0M,10M,20M,30M,40M,50M
+[plot_tesi_timeseries]
 noise=0M
-
-clientnumber_active=1,2,4,6,8,10
-clientnumber_passivewifi=8
-#clientnumber_passivewifi=1,2,4,6,8,10
-clientnumber_passivelte=1,2
-
-#dashfiles=filetest_1,file5min,file12min,file25min
 dashfiles=file25min
 
-dates_activewifi=2020-11-17,2020-11-18
-dates_activelte=2020-11-17
+clientnumber_passivewifi=8
+clientnumber_passivelte=1,2
+
+from_passive=2020-01-01-00:00:00
+to_passive=2020-11-30-23:59:59
+
+client_subnetaddr_lte=10.0.3
+client_subnetaddr_wifi=192.168.1
+edgeserver_subnetaddr_wifi=10.0.1
+edgeserver_subnetaddr_lte=192.168.200
+remoteserver_subnetaddr_wifi=131.114.73
+remoteserver_subnetaddr_lte=131.114.73
+
+evaluate_fragmentquality=False
+
+[plot_tesi_timeseries_withquality]
+noise=0M
+dashfiles=file25min
+
+clientnumber_passivewifi=8
+clientnumber_passivelte=1,2
+
+from_passive=2019-03-12-00:00:00
+to_passive=2021-03-29-23:59:50
+
+client_subnetaddr_lte=10.0.3
+client_subnetaddr_wifi=192.168.1
+edgeserver_subnetaddr_wifi=10.0.1
+edgeserver_subnetaddr_lte=192.168.200
+remoteserver_subnetaddr_wifi=131.114.73
+remoteserver_subnetaddr_lte=131.114.73
+
+evaluate_fragmentquality=True
+
+
+[plot_esperimentiNITOS_PPASSIVISENZABUCHI_SECONDOEXPWIFICONMAGGIORICROSSTRAFFIC]
+#noise=0M,10M,20M,30M,40M,50M,75M,100M,150M
+noise=0M,10M,20M,30M,40M,50M
+#noise=0M
+
+clientnumber_active=1,2,4,6,8,10
+clientnumber_passivewifi=1,2,4,6,8,10
+#clientnumber_passivewifi=8
+clientnumber_passivelte=1,2
+
+dashfiles=filetest_1,file5min,file12min,file25min
+#dashfiles=file25min
+
+#dates_activewifi=2020-11-17,2020-11-18
+dates_activewifi=2020-01-24,2020-01-25,2020-01-26,2020-01-27,2020-01-28,2020-01-29,2020-01-30,2020-01-31,2020-02-01
+dates_activelte=2020-04-06, 2020-04-07, 2020-04-08
 starting_time_intervals = 11:00:00
 duration_m = 90
-from_passive=2020-01-23-00:00:00
-to_passive=2020-11-27-23:59:50
+#from_passive=2020-01-23-00:00:00
+#to_passive=2020-11-27-23:59:50
 
+from_passive=2020-01-01-00:00:00
+to_passive=2020-11-30-23:59:59
 
 client_subnetaddr_lte=10.0.3
 client_subnetaddr_wifi=192.168.1
@@ -92,7 +177,7 @@ evaluate_fragmentquality=True
 
 [plot_esperimentiNITOS_PASSIVICONQUALITaDELFRAMMENTO10-8client]
 noise=0M,10M
-clientnumber_passivewifi=10
+clientnumber_passivewifi=8
 
 dashfiles=file25min
 
