--- a/observer/build.gradle
+++ b/observer/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'java-library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':common')
+    implementation files('/home/chiara/MECPerf/json-simple-1.1.1.jar')
 }
 
 sourceCompatibility = "7"
